[gd_scene load_steps=6 format=2]

[ext_resource path="res://Screens/RayCast2D/Boids/SmartEnemy.gd" type="Script" id=1]
[ext_resource path="res://common/enemy/enemy.png" type="Texture" id=2]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 1.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 33.0
height = 66.0

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="SmartEnemy" type="RigidBody2D"]
collision_layer = 0
collision_mask = 5
mass = 2.0
physics_material_override = SubResource( 1 )
linear_damp = 8.0
angular_damp = 8.0
script = ExtResource( 1 )

[node name="enemy" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="RayCasts" type="Node2D" parent="."]

[node name="LeftCast2D" type="RayCast2D" parent="RayCasts"]
position = Vector2( -40, -40 )
rotation = -0.785398
enabled = true
cast_to = Vector2( 0, -400 )
collision_mask = 4

[node name="RightCast2D" type="RayCast2D" parent="RayCasts"]
position = Vector2( 40, -40 )
rotation = 0.785398
enabled = true
cast_to = Vector2( 0, -400 )
collision_mask = 4

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width_curve = SubResource( 3 )
default_color = Color( 1, 0.215686, 0.215686, 1 )
